# nnlib

./: CMakeLists.txt  README.md
driver/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
nn/: CMakeLists.txt  TMultiLayerPerceptron.cpp  TMultiLayerPerceptron.h  TPerceptron.cpp  TPerceptron.h
